# LauPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/foxconn/lau/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioPlay.cpp  AudioPlay.h  BasePlay.h  JavaCallHelper.cpp  JavaCallHelper.h  LauFFmpeg.cpp  LauFFmpeg.h  VideoChannel.cpp  VideoChannel.h  VideoPlay.cpp  VideoPlay.h  lau-player.cpp  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/foxconn/lau/myapplication/: BsPatch.java  LauPlayer.java  LivePusher.java  MainActivity.java
app/src/main/java/com/foxconn/lau/myapplication/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/foxconn/lau/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
